--- a/src/assets/styles/layout/_base.scss
+++ b/src/assets/styles/layout/_base.scss
@@ -1,8 +1,7 @@
 .md-content {
   width: 100%;
-  height:100%;
-  overflow:auto;
-  background-color: $color-secondary;
+  height: 100%;
+  overflow: auto;
 }
 
 .md-content-program {
@@ -10,14 +9,16 @@
   margin-left: $margin-left-content;
 }
 
-.md-message-centred {
+.md-message-centred, .md-message-content-centred {
   position: relative;
   text-align: center;
+  color: $color-font;
+}
+
+.md-message-centred {
   top: 40%;
 }
 
 .md-message-content-centred {
-  position: relative;
-  text-align: center;
   padding: 35%;
 }
