--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,4 +14,6 @@
   @import 'components/tabs';
   @import 'components/timeline';
   @import 'components/scrollbar';
+
+  background-color: $color-element;
 }
